--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -7,6 +7,9 @@ jobs:
     first_name:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout To Repository
+              uses: actions/checkout@v4
+
             - name: Welcome Message
               run: echo "Hello World"
 
