--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -18,3 +18,6 @@ jobs:
 
             - name: IP Adderess
               run: hostname -I
+
+            - name: Cat command to README
+              run: cat README.md
