--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -18,7 +18,7 @@ jobs:
                   ls
                   ls -la
                   ifconfig
-                  ping google.com
+                  ping google.com -c 4
 
 
             - name: IP Adderess
