--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -18,8 +18,8 @@ jobs:
                   ls
                   ls -la
                   ifconfig
-                  ping google.com -c 4
-
+            - name: Test Connectivity
+              run: curl -I https://www.google.com
 
             - name: IP Adderess
               run: hostname -I
