--- a/.github/workflows/generateASCII.yaml
+++ b/.github/workflows/generateASCII.yaml
@@ -1,10 +1,10 @@
-name : third party package
+name: third party package
 
 on: push
 
-job:
+jobs:
   cowsay_package:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - name: update
       run: sudo apt update
